[18097] - Removed duplicate breadcrumbs component. Fixed breadcrumbs on mobile.

--- a/health/sass/components/navigation/breadcrumb/_extends.scss
+++ b/health/sass/components/navigation/breadcrumb/_extends.scss
@@ -6,7 +6,15 @@
 //
 // Style guide: navigation.breadcrumb
 
-%au-breadcrumbs,
-.au-breadcrumbs {
+.breadcrumbs {
   @extend .au-breadcrumbs;
+  display: none;
+  @include AU-media(sm) {
+    display: block;
+  }
+
+  .breadcrumbs__list {
+    @extend .au-link-list;
+    @extend .au-link-list--inline;
+  }
 }
